# looptrace

./: .gitignore  .lintr  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  README.md  build.sbt  docker-compose.yml  environment.yaml  environment.yml  environment_analysis.yaml  environment_analysis.yml  environment_test.yml  example_tracing_processing_config.annotated.yaml  gaussfit.py  image_comparison.py  image_process.py  image_processing_functions.py  pyproject.toml  python3_and_R.ipynb  setup.py  shell.nix  temp-plot.html  tracer.py  tracing_example.ipynb  tracing_example_with_Python3_and_R.ipynb  tracing_functions.py  tracing_labmeet_260520.ipynb  tracing_labmeet_260520_kai.ipynb
.github/workflows/: ci-python.yaml  ci.yml  clean.yml  docs-test.yml  python-tests-non-pipeline.yml  python-tests-pipeline.yml  python-tests.yml
.ipynb_checkpoints/: tracing_example-checkpoint.ipynb
Config/: mypic_exp_drift_corr_config.yaml  tracing_config.yaml
Jupyter_config_dir/: jupyter_notebook_config.py
analysis__ad_hoc/: analyse_detected_bead_rois.R  analyse_spot_detection_gridsearch.py  analyse_spot_detection_parameterisations.R  analyse_spot_detection_parameterisations.py  analysis_gridsearch.py
analysis_ad_hoc/: diagnose_offcenter.py  tracing_spot_image_analysis.R  tracing_spot_image_analysis.py
automation/: README.md  auto_image.spec  logfile  status.json
chromatin_tracing_python/: Drifter.py  ImageHandler.py  SpotPicker.py  comparison_functions.py  detect_nuclei.py  drift_correction.py  drift_correction_decon.py  drift_correction_tracing.py  drift_correction_tracing_dask.py  gaussfit.py  image_comparison.py  image_processing_functions.py  nuclei_detection.py  psf_decon.py  sr_functions.py  temp-plot.html  trace_analysis_functions.py  tracer.py  tracer_h5.py  tracing_functions.py  tracing_gui_handler_class.py
chromatin_tracing_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chromatin_tracing_python/automation/: config.yml  (+2 more)
docs/: README.md  data_structure.notes.md  development.md  imaging-rounds-configuration-file.md  parameters-configuration-file.md  pipeline-execution-control-and-rerun.md  pipeline-execution-control-and-restart.md  pipeline-outputs.md  running-the-pipeline.md  running_the_pipeline.md  signal-analysis-configuration-file.md  visualisation.md  visualising-spots.md
example_configs/: dc_config.yaml  mypic_exp_drift_corr_config.yaml  sr_analysis_config.yaml  tracing_analysis_config.yaml
examples/: image_comparison_config.yaml  tracing_analysis_config.yaml
image_processing_functions/: gaussfit.py  image_processing_functions.py  temp-plot.html  tracing_functions.py
legacy/: drift_correction.py  multiscales_template_multi.json  nikon_tiff_to_zarr.py  preprocess.py  volume_segment_functions.py
looptrace/: Compare.py  Deconvolver.py  Drifter.py  ImageHandler.py  NucDetector.py  SpotPicker.py  Tracer.py  __init__.py  bead_roi_generation.py  comparison_functions.py  configuration.py  conversion_to_zarr.py  exceptions.py  filepaths.py  gaussfit.py  geometry.py  image_io.py  image_processing_functions.py  integer_naming.py  legacy_function_deposit.py  napari_helpers.py  nd2io.py  numeric_types.py  pathtools.py  point_spread_function.py  rouse_polymer.py  rouse_polymer_smc_release.py  trace_analysis_functions.py  trace_metadata.py  tracing_qc_support.py  utilities.py  voxel_stack.py  wrappers.py
notebooks/: Find ROIs.ipynb  OK_Random_Walks.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  comparison_analysis.ipynb  comparison_run.ipynb  czi_to_zarr_notebook.ipynb  example_tracing_processing_config.annotated.yaml  example_tracing_processing_config.yml  looptrace_image_processing_example_HPC.ipynb  looptrace_image_processing_example_single_computer.ipynb  nikon_workflow.ipynb  nikon_workflow_classify.ipynb  organize_zen_pos_split.ipynb  random_coil_model.ipynb  run_analysis.ipynb  spot_analysis.ipynb  spot_fit_franzi.ipynb  temp-plot.html  tracing_analysis_config.yaml  tracing_decon_python_gpa.ipynb  tracing_example_with_Python3_and_R.ipynb  tracing_labmeet_260520_kai.ipynb
preprocess/: czi_to_zarr.py  czi_to_zarr_notebook.ipynb  environment.yml  multiscales_template.json  nikon_tiff_to_zarr.py
project/: Dependencies.scala  plugins.sbt
pychrtrace/: Compare.py  Drifter.py  ImageHandler.py  NucDetector.py  SpotPicker.py  Tracer.py  __init__.py  comparison_functions.py  drift_correction.py  gaussfit.py  image_comparison.py  image_processing_functions.py  trace_analysis_functions.py  tracer.py
requirements/: requirements_GENERAL.txt  requirements_czi.txt  requirements_deconvolution.txt  requirements_interactive-graphics.txt  requirements_nd2.txt  requirements_nuclei.txt  requirements_parallel.txt
setup_image/: README.md  allow-proposed-repos.sh  allow_new_R.sh  make-proposed-repos-selective.sh
test_docs/: test_pipeline_execution_control_and_resart_doc.py
tests/: conftest.py  hypothesis_extra_strategies.py  test__integer_naming.py  test__stack_nd2_to_dask.py  test_deconvolution.py  test_detected_spots_visualisation_output_path_determination.py  test_locus_spot_viewing_key.py  test_locus_spot_viewing_reindexing_determination.py  test_nucleus_detection.py  test_parse_positions_and_timepoints_from_text.py  test_pipeline.py  test_potential_trace_metadata.py  test_read_csv_maybe_empty.py  test_roi_ordering_specification.py  test_tracing_qc.py  test_voxel_size.py  test_voxel_stack_specification.py  test_zarr_conversion.py  utilities.py
trace_data_example/: 20200604_Exp328v2_KSB_Elyra_tracing_myc_D1-10_analysis_only_traces.ipynb  20200604_Exp328v2_KSB_Elyra_tracing_myc_D1-10_config.yaml  20200604_Exp328v2_KSB_Elyra_tracing_myc_D1-10_traces.csv
tracebot/: Tracebot_manual.docx  Tracebot_manual.rtf  all_coords.json  auto_image.py  mw_pump_functions.py  mw_pump_functions_bartels.py  mw_pump_functions_filecomm.py  mw_pump_functions_workshop.py  mw_pump_gui.py  python_nis_sync_simple_example.py  pythonnissync_events.mac  robot_config.yaml  robot_config_template.yaml  sel_coords.json  socket_client_test.py  socket_host_test.py  status.json
(+2488 files in other folders)
